--- a/app/src/main/res/layout/fragment_barcode_camera.xml
+++ b/app/src/main/res/layout/fragment_barcode_camera.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     android:keepScreenOn="true">
 
     <me.king.jake.fis.views.CameraSourcePeview
@@ -11,4 +12,19 @@
         android:layout_width="match_parent">
         <include layout="@layout/camera_preview_overlay" />
     </me.king.jake.fis.views.CameraSourcePeview>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_flash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="32dp"
+        android:src="@drawable/flash_icon"
+        android:clickable="true"
+        android:focusable="true"
+        android:contentDescription="@string/flash_cd"
+        android:backgroundTint="@android:color/black"
+        app:borderWidth="0dp"
+        app:fabSize="normal" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
