--- a/app/src/main/res/layout/camera_preview_overlay.xml
+++ b/app/src/main/res/layout/camera_preview_overlay.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <me.king.jake.fis.views.GraphicOverlay
         android:id="@+id/camera_preview_graphic_overlay"
         android:layout_width="match_parent"
@@ -11,6 +12,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent">
+
+        <ProgressBar
+            android:id="@+id/search_progress_bar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateTint="@android:color/white"
+            android:indeterminateTintMode="src_in"
+            android:visibility="gone"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/info_chip"
+            style="@style/Widget.MaterialComponents.Chip.Entry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:checkable="false"
+            android:clickable="false"
+            android:fontFamily="@font/qs"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:visibility="gone"
+            app:chipCornerRadius="8dp"
+            app:chipSurfaceColor="@color/alpha_background"
+            app:closeIconVisible="false" />
 
     </FrameLayout>
 </merge>
