--- a/app/src/main/res/layout/bottom_inventory_view.xml
+++ b/app/src/main/res/layout/bottom_inventory_view.xml
@@ -19,5 +19,48 @@
             android:textSize="26sp"
             android:fontFamily="@font/qs"
             android:textColor="@android:color/white" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/margin">
+            <me.king.jake.fis.views.ItemInfoInput
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/item_info_input"
+                android:layout_marginBottom="@dimen/margin"/>
+
+            <me.king.jake.fis.views.PropertiesInput
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/properties_input"
+                android:layout_marginBottom="@dimen/margin" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@android:string/cancel"
+                    android:id="@+id/cancel"
+                    android:layout_alignParentStart="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:fontFamily="@font/qs"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/submit"
+                    android:id="@+id/submit"
+                    android:layout_alignParentEnd="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:fontFamily="@font/qs"/>
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </merge>
