--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="header_3">20sp</dimen>
 
     <dimen name="margin">12dp</dimen>
+    <dimen name="large_margin">18dp</dimen>
 </resources>
