--- a/app/src/main/res/layout/fragment_inventory_overview.xml
+++ b/app/src/main/res/layout/fragment_inventory_overview.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,22 +17,8 @@
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/overview_steps"
         android:layout_weight="1"
         android:overScrollMode="never" />
-
-    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/overview_steps_indicator"
-        app:dotsColor="@color/inventory_view_top_bar"
-        app:dotsStrokeColor="@color/inventory_view_top_bar"
-        app:dotsCornerRadius="8dp"
-        app:dotsSize="16dp"
-        app:dotsSpacing="4dp"
-        app:dotsStrokeWidth="2dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/large_margin"
-        android:layout_weight="0"/>
 </LinearLayout>
