--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,10 +7,13 @@
     <dimen name="reticle_ripple_size_offset">30dp</dimen>
     <dimen name="reticle_ripple_stroke_width">4dp</dimen>
 
+    <dimen name="quick_action_stoke">2dp</dimen>
+
     <dimen name="header_1">48sp</dimen>
     <dimen name="header_2">28sp</dimen>
     <dimen name="header_3">20sp</dimen>
 
+    <dimen name="small_margin">6dp</dimen>
     <dimen name="margin">12dp</dimen>
     <dimen name="large_margin">18dp</dimen>
 </resources>
