--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -19,14 +19,12 @@
                 android:src="@drawable/inventory"
                 android:scaleType="centerCrop"
                 android:contentDescription="@string/cd_fruit"
-                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.3"
-                android:background="@android:color/black"
-                android:fitsSystemWindows="true"/>
+                android:background="@android:color/black"/>
 
             <TextView
                 android:layout_width="match_parent"
