--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -7,7 +7,8 @@
     <androidx.core.widget.NestedScrollView
         android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:overScrollMode="never">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
