--- a/app/src/main/res/layout/input_properties.xml
+++ b/app/src/main/res/layout/input_properties.xml
@@ -19,4 +19,10 @@
             android:maxLines="1"
             android:id="@+id/input_quantity"/>
     </com.google.android.material.textfield.TextInputLayout>
+
+    <me.king.jake.fis.views.AttributesList
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_attributes"
+        android:layout_marginBottom="@dimen/margin" />
 </LinearLayout>
